fix overflow

--- a/app/assets/stylesheets/slash_admin/application.scss
+++ b/app/assets/stylesheets/slash_admin/application.scss
@@ -813,6 +813,7 @@ h6 {
       margin-top: 0;
       min-height: 100vh;
       padding: 25px 20px 10px;
+      overflow: auto;
     }
   }
 
